--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "react-scripts": "3.0.1"
   },
   "jest": {
-    "testMatch": ["**/__tests__/**/*.test.js"],
+    "testMatch": [
+      "**/__tests__/**/*.test.js"
+    ],
     "setupFilesAfterEnv": [
       "@testing-library/react/cleanup-after-each",
-      "@testing-library/jest-dom/extend-expect"
+      "@testing-library/jest-dom/extend-expect",
+      "jest-localstorage-mock"
     ],
     "moduleNameMapper": {
       "^~/(.*)": "<rootDir>/src/$1"
@@ -39,6 +42,7 @@
     "@testing-library/jest-dom": "^4.2.0",
     "@testing-library/react": "^9.3.0",
     "@types/jest": "^24.0.20",
+    "jest-localstorage-mock": "^2.4.0",
     "react-app-rewired": "^2.1.4"
   }
 }
