--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "immer": "^4.0.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -46,6 +47,7 @@
     "@testing-library/jest-dom": "^4.2.0",
     "@testing-library/react": "^9.3.0",
     "@types/jest": "^24.0.20",
+    "axios-mock-adapter": "^1.17.0",
     "jest-localstorage-mock": "^2.4.0",
     "react-app-rewired": "^2.1.4"
   }
